# cbi_plus

./: .gitignore  CITATION.cff  LICENSE  README.md  ieee_v4_adapter.py  index.html  pyproject.toml  tfb_adapter.py  tfb_teaching_extract.py  validate_no_private_data.py
.github/workflows/: ci.yml  publish-pypi.yml  selfdemo.yml  workflow.yml
benchmarks/: GATES_MEMO.md  MANIFEST.json  benchmark_actual_statistics.csv  benchmark_expected_statistics.csv  benchmark_validation_tolerance_template.csv  index.html  repro_pass_fail.csv
benchmarks/I-10/: README.md  dataset_meta.json
benchmarks/I-405/: README.md  dataset_meta.json  sensor_information.csv
benchmarks/_datapack/: DATA_FORMATS.md  cbi_arizona_inrix_readings_sample.csv  cbi_arizona_tmc_identification_sample.csv  cbi_arizona_tmc_segments.geojson  ctm_supply_sample.csv  fd_16models_input_sample.csv  paq_corridor_speeds_sample.csv  pems_i10_2018_sensors.geojson  pems_i10_2018_sensors_sample.csv  pems_i10_2018_states_sample.csv  pems_i405_2018_sensors.geojson  (+5 more)
cbi_pipeline/: __init__.py  ai_arena.py  api.py  benchmark_gates.py  cbi_dashboard.py  cbi_dashboard_template.html  cbi_tokens.py  corridor_workflow.py  diagnostics.py  discover.py  engine_arena.py  evidence.py  fd_model_zoo.py  flow_tensor.py  io_unified.py  issue_graph.py  pm3_reliability.py  repro_gates.py  run_pipeline.py  schemas.py  stage1_qc.py  stage2_episodes.py  stage2b_measured_diagnostics.py  stage3_fd_robust.py  stage4_mu_validation.py  stage4_verification.py  stage5_qvdf.py  stage5_verification.py  stage5b_corridor_aggregate.py  stage6_cbi_ranking.py  tensor_tools.py  text_reader.py  vhd.py
docs/: ADD_A_BENCHMARK.md  ADD_VOCABULARY.md  ADOPTION_TRACE.md  AI_PARTICIPANT_PROTOCOL.md  AMS_FRAMEWORK.md  CBI_TOKENS.md  CLOSEOUT.md  CONTRACTS.md  ENGINES.md  ENGINE_SHOWCASE.md  FIXES_CBI_PLUS_2026-07-07.md  FLOW_TENSOR_MATH.md  GLOSSARY.md  INTELLECTUAL_LINEAGE.md  INTRODUCTION.md  ISSUE_REGISTER.md  LESSONS_LEARNED.md  MISSION.md  MISUNDERSTANDING_GATES.md  PACKAGE_GUIDE.md  PLAYBOOK_ONBOARD_CORRIDOR_AND_DATASET.md  RAG_EVIDENCE_COMPILER.md  READER_PLANNER_WRITER.md  RELEASE.md  SETUP_FOR_BEGINNERS.md  STAGE_CHAIN.md  TFB_CBI_GUIDE.md  cbi_plus_additional_misunderstanding_audit.md
notebooks/: 01_getting_started.ipynb  02_queue_anatomy_T0_T2_T3.ipynb  03_fundamental_diagram.ipynb  04_qvdf_real_I10.ipynb  05_cbi_ranking_ieee_v4.ipynb  README.md
qvdf_selfdemo/: __init__.py  config.py  dashboard.py  handoff.py  pipeline.py  quality.py  qvdf_core.py  run.py  selftest.py  stage2_odme.py  validation_report.csv
schemas/: ams_scheme_example.yml  ams_scheme_i66_draft.yml  dataset_meta.schema.json  issue_graph.schema.json
scripts/: build_data_pack.py
teaching_cases/: README.md  case_01_az_inrix_i17.py  case_02_ca_pems_i10.py  case_03_ca_pems_i405.py  case_04_cross_corridor_comparison.py
(+123 files in other folders)
